--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url= jdbc:mysql://localhost:3306/pharmacy_app?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=admin
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.properties.hibernate.format_sql = true
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
